adding ethernet-virtual-connection #45
