# topology-conversion/swagger/swagger.yaml
@@ -9,7 +9,7 @@ servers:
   - url: http://0.0.0.0
 
 paths:
-  /oxp/topology:
+  /topology:
     get:
       tags:
         - OXP Topology
@@ -28,13 +28,13 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-openapi-router-controller: controllers.topology_controller
-  /oxp/enable/all:
+  /enable/all:
     get:
       tags:
         - OXP Switches, Interfaces, Links
       summary: Enable OXP network switches, Interfaces, Links
       description: Enable the switches, Interfaces, Links from a SDN controller.
-      operationId: get_oxp_enable_all
+      operationId: post_oxp_enable_all
       responses:
         '200':
           description: Successfully enable OXP network switches, interfaces and links.
@@ -47,13 +47,13 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-openapi-router-controller: controllers.operational_controller
-  /oxp/disable/all:
+  /disable/all:
     get:
       tags:
         - OXP Switches, Interfaces, Links
       summary: Disable OXP network switches, Interfaces, Links
       description: Disable the switches, Interfaces, Links from a SDN controller.
-      operationId: get_oxp_disable_all
+      operationId: post_oxp_disable_all
       responses:
         '200':
           description: Successfully disable OXP network switches, interfaces and links.
@@ -66,7 +66,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-openapi-router-controller: controllers.operational_controller
-  /oxp/switches:
+  /switches:
     get:
       tags:
         - OXP Switches
@@ -85,7 +85,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-openapi-router-controller: controllers.operational_controller
-  /oxp/switch/{dpId}:
+  /switch/{dpId}:
     get:
       tags:
         - OXP Switch by dpID
@@ -104,7 +104,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-openapi-router-controller: controllers.operational_controller
-  /oxp/switch/enable/{dpId}:
+  /switch/enable/{dpId}:
     get:
       tags:
         - Switch
@@ -117,7 +117,7 @@ paths:
             type: string
           required: true
           description: dpId of the Switch
-      operationId: get_oxp_switch_enable
+      operationId: post_oxp_switch_enable
       responses:
         '200':
           description: Successfully enable a switch passing its dpId.
@@ -130,7 +130,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-openapi-router-controller: controllers.operational_controller
-  /oxp/switch/disable/{dpId}:
+  /switch/disable/{dpId}:
     get:
       tags:
         - Switch
@@ -143,7 +143,7 @@ paths:
             type: string
           required: true
           description: dpId of the Switch
-      operationId: get_oxp_switch_disable
+      operationId: post_oxp_switch_disable
       responses:
         '200':
           description: Successfully disable a switch passing its dpId.
@@ -156,7 +156,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-openapi-router-controller: controllers.operational_controller
-  /oxp/interfaces:
+  /interfaces:
     get:
       tags:
         - OXP Interfaces
@@ -175,7 +175,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-openapi-router-controller: controllers.operational_controller
-  /oxp/interface/{dpId}:
+  /interface/{dpId}:
     get:
       tags:
         - OXP Interface by ID
@@ -194,7 +194,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-openapi-router-controller: controllers.operational_controller
-  /oxp/interface/enable/{dpId}:
+  /interface/enable/{dpId}:
     get:
       tags:
         - Interface
@@ -207,7 +207,7 @@ paths:
             type: string
           required: true
           description: Id of the Interface
-      operationId: get_oxp_interface_enable
+      operationId: post_oxp_interface_enable
       responses:
         '200':
           description: Successfully enable an interface passing its Id.
@@ -220,7 +220,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-openapi-router-controller: controllers.operational_controller
-  /oxp/interface/disable/{dpId}:
+  /interface/disable/{dpId}:
     get:
       tags:
         - Interface
@@ -233,7 +233,7 @@ paths:
             type: string
           required: true
           description: Id of the Interface
-      operationId: get_oxp_interface_disable
+      operationId: post_oxp_interface_disable
       responses:
         '200':
           description: Successfully disable an interface passing its Id.
@@ -246,7 +246,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-openapi-router-controller: controllers.operational_controller
-  /oxp/links:
+  /links:
     get:
       tags:
         - OXP Links
@@ -259,13 +259,13 @@ paths:
           content:
             application/json: {}
         '401':
-          description: Validation error in the conversion process.
+          description: Validation error in the Links retrieve process.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
       x-openapi-router-controller: controllers.operational_controller
-  /oxp/link/{dpId}:
+  /link/{dpId}:
     get:
       tags:
         - OXP Link by Link ID
@@ -284,7 +284,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-openapi-router-controller: controllers.operational_controller
-  /oxp/link/enable/{dpId}:
+  /link/enable/{dpId}:
     get:
       tags:
         - Link
@@ -297,7 +297,7 @@ paths:
             type: string
           required: true
           description: dpId of the Link
-      operationId: get_oxp_link_enable
+      operationId: post_oxp_link_enable
       responses:
         '200':
           description: Successfully enable a Link passing its dpId.
@@ -310,7 +310,83 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-openapi-router-controller: controllers.operational_controller
-  /oxp/link/disable/{dpId}:
+  /evcs:
+    get:
+      tags:
+        - OXP EVCs
+      summary: Retrieve OXP network Ethernet Virtual Connections
+      description: Fetches the EVCs from a SDN controller.
+      operationId: get_oxp_evcs
+      responses:
+        '200':
+          description: Successfully retrieved OXP network EVCs.
+          content:
+            application/json: {}
+        '401':
+          description: Validation error in the EVCs retrieve process.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-openapi-router-controller: controllers.operational_controller
+  /evc/enable:
+    post:
+      tags:
+        - EVC
+      summary: Enable Ethernet Network Connection
+      description: Enable Ethernet Network Connection
+      operationId: post_oxp_evc_enable
+      responses:
+        '200':
+          description: Successfully enable all inter domain EVC.
+          content:
+            application/json: {}
+        '401':
+          description: Validation error in all inter domain EVC enable process.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-openapi-router-controller: controllers.operational_controller
+  /evc/vlan/enable:
+    post:
+      tags:
+        - EVC VLAN
+      summary: Enable Ethernet Network Connection Vlan Translation
+      description: Enable Ethernet Network Connection Vlan Translation
+      operationId: post_oxp_vlan_enable
+      responses:
+        '200':
+          description: Successfully enable all inter domain EVC VLAN translation.
+          content:
+            application/json: {}
+        '401':
+          description: Validation error in all inter domain EVC VLAN enable process.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-openapi-router-controller: controllers.operational_controller
+  /host/config:
+    post:
+      tags:
+        - Host
+      summary: Enable host configuration
+      description: Enable all host configuration
+      operationId: post_oxp_host_enable
+      responses:
+        '200':
+          description: Successfully configured all Hosts.
+          content:
+            application/json: {}
+        '401':
+          description: Validation error in the Host configuration process.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-openapi-router-controller: controllers.operational_controller
+  /link/disable/{dpId}:
     get:
       tags:
         - Link
@@ -323,7 +399,7 @@ paths:
             type: string
           required: true
           description: dpId of the Link
-      operationId: get_oxp_link_disable
+      operationId: post_oxp_link_disable
       responses:
         '200':
           description: Successfully disable a Link passing its dpId.
